--- a/main.css
+++ b/main.css
@@ -12,23 +12,28 @@
 
 body {
   display: flex;
-  align-items: center;
+  align-items: flex-end; /* Menempatkan bunga di bawah */
   justify-content: center;
   min-height: 100vh;
   background-color: var(--dark-color);
-  overflow: visible;
+  overflow: hidden; /* Menghindari scrollbar */
   perspective: 1000px;
 }
 
 .night {
   position: fixed;
-  left:  underworld: center;
+  left: 50%;
   top: 0;
   transform: translateX(-50%);
   width: 100%;
   height: 100%;
   filter: blur(0.1vmin);
-  background-image: radial-gradient(ellipse at top, transparent 0%, var(--dark-color)), radial-gradient(ellipse at bottom, var(--dark-color), rgba(145, 233, 255, 0.2));
+  background-image: radial-gradient(ellipse at top, transparent 0%, var(--dark-color)), 
+                   radial-gradient(ellipse at bottom, var(--dark-color), rgba(145, 233, 255, 0.2)),
+                   repeating-linear-gradient(220deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px),
+                   repeating-linear-gradient(189deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px),
+                   repeating-linear-gradient(148deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px),
+                   linear-gradient(90deg, rgb(7, 107, 42), rgb(240, 240, 240)); /* Mengembalikan efek cahaya */
 }
 
 .flowers {
@@ -49,7 +54,7 @@ body {
   animation: moving-flower-1 4s linear infinite;
 }
 .flower--1 .flower__line {
-  height: 70vmin;
+  height: 50vmin; /* Tinggi tangkai dikurangi */
   animation-delay: 0.3s;
 }
 .flower--1 .flower__line__leaf--1 {
@@ -77,7 +82,7 @@ body {
   animation: moving-flower-2 4s linear infinite;
 }
 .flower--2 .flower__line {
-  height: 60vmin;
+  height: 50vmin; /* Tinggi tangkai dikurangi */
   animation-delay: 0.6s;
 }
 .flower--2 .flower__line__leaf--1 {
@@ -145,7 +150,7 @@ body {
   left: 50%;
   width: 8vmin;
   height: 11vmin;
-  border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
+  border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; /* Bentuk kelopak disederhanakan */
   background-color: #f672b0;
   background-image: linear-gradient(to top, #ee5286, #ee5286);
   transform-origin: bottom center;
@@ -153,20 +158,20 @@ body {
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
 }
 .flower__leaf--1 {
-  transform: translate(-10%, 1%) rotateY(40deg) rotateX(-50deg);
+  transform: translate(-50%, 0) rotateY(0deg) rotateX(0deg); /* Transformasi disederhanakan */
 }
 .flower__leaf--2 {
-  transform: translate(-50%, -4%) rotateX(40deg);
+  transform: translate(-50%, 0) rotateY(0deg) rotateX(0deg);
 }
 .flower__leaf--3 {
-  transform: translate(-90%, 0%) rotateY(45deg) rotateX(50deg);
+  transform: translate(-50%, 0) rotateY(0deg) rotateX(0deg);
 }
 .flower__leaf--4 {
   width: 8vmin;
   height: 8vmin;
   transform-origin: bottom left;
-  border-radius: 4vmin 10vmin 4vmin 4vmin;
-  transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
+  border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+  transform: translate(-50%, 0) rotateX(0deg) rotate(0deg);
   background-image: linear-gradient(to top, #ee5286, #ee5286);
   z-index: 1;
   opacity: 0.8;
@@ -194,7 +199,7 @@ body {
 }
 
 .flower__line {
-  height: 55vmin;
+  height: 40vmin; /* Tinggi tangkai dikurangi */
   width: 1.5vmin;
   background-image: linear-gradient(to left, rgba(0, 0, 0, 0.2), transparent, rgba(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #583e08, #944415);
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
@@ -204,226 +209,74 @@ body {
 }
 
 .flower__line__leaf {
-  --w: 7vmin;
-  --h: calc(var(--w) + 2vmin);
+  --w: 5vmin; /* Ukuran daun dikurangi */
+  --h: calc(var(--w) + 1vmin);
   position: absolute;
   top: 20%;
-  left: 90%;
+  left: 50%; /* Daun diposisikan di tengah */
   width: var(--w);
   height: var(--h);
-  border-top-right-radius: var(--h);
-  border-bottom-left-radius: var(--h);
-  background-image: linear-gradient(to top, rgba(20, 117, 122, 0.4), #095721);
+  border-radius: 50% 0 0 50%; /* Bentuk daun disederhanakan */
+  background-image: linear-gradient(to top, #095721, #095721);
+  transform-origin: bottom center;
 }
 .flower__line__leaf--1 {
-  transform: rotate(70deg) rotateY(30deg);
+  transform: rotate(45deg);
 }
 .flower__line__leaf--2 {
-  top: 45%;
-  transform: rotate(70deg) rotateY(30deg);
+  top: 30%;
+  transform: rotate(45deg);
 }
 .flower__line__leaf--3 {
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: var(--h);
-  border-bottom-right-radius: var(--h);
-  left: -100%;
-  top: 12%;
-  transform: rotate(-70deg) rotateY(30deg);
+  left: -50%; /* Posisi disesuaikan */
+  top: 20%;
+  transform: rotate(-45deg);
 }
 .flower__line__leaf--4 {
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: var(--h);
-  border-bottom-right-radius: var(--h);
-  left: -100%;
-  top: 40%;
-  transform: rotate(-70deg) rotateY(30deg);
+  left: -50%;
+  top: 30%;
+  transform: rotate(-45deg);
 }
 .flower__line__leaf--5 {
-  top: 0;
-  transform-origin: left;
-  transform: rotate(70deg) rotateY(30deg) scale(0.6);
+  top: 10%;
+  transform: rotate(45deg) scale(0.6);
 }
 .flower__line__leaf--6 {
-  top: -2%;
-  left: -90%;
-  transform-origin: right;
-  transform: rotate(-70deg) rotateY(30deg) scale(0.6);
+  top: 10%;
+  left: -50%;
+  transform: rotate(-45deg) scale(0.6);
 }
 
 .flower__grass {
   --c: #04661f;
   --line-w: 1.5vmin;
   position: absolute;
-  bottom: 12vmin;
-  left: -7vmin;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  z-index: 20;
-  transform-origin: bottom center;
-  transform: rotate(-48deg) rotateY(40deg);
-}
-.flower__grass--1 {
-  animation: moving-grass 2s linear infinite;
-}
-.flower__grass--top {
-  width: 7vmin;
-  height: 10vmin;
-  border-top-right-radius: 100%;
-  border-right: var(--line-w) solid var(--c);
-  transform-origin: bottom center;
-  transform: rotate(-2deg);
-}
-.flower__grass--bottom {
-  margin-top: -2px;
-  width: var(--line-w);
-  height: 25vmin;
-  background-image: linear-gradient(to top, transparent, var(--c));
-}
-.flower__grass__leaf {
-  --size: 10vmin;
-  position: absolute;
-  width: calc(var(--size) * 2.1);
-  height: var(--size);
-  border-top-left-radius: var(--size);
-  border-top-right-radius: var(--size);
-  background-image: linear-gradient(to top, transparent, transparent 30%, var(--c));
-  z-index: 100;
-}
-.flower__grass__leaf--1 {
-  top: -6%;
-  left: 30%;
-  --size: 6vmin;
-  transform: rotate(-20deg);
-  animation: growing-grass-ans--1 2s 2.6s backwards;
-}
-@keyframes growing-grass-ans--1 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-20deg) scale(0);
-  }
-}
-.flower__grass__leaf--2 {
-  top: -5%;
-  left: -110%;
-  --size: 6vmin;
-  transform: rotate(10deg);
-  animation: growing-grass-ans--2 2s 2.4s linear backwards;
-}
-@keyframes growing-grass-ans--2 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
-}
-.flower__grass__leaf--3 {
-  top: 5%;
-  left: 60%;
-  --size: 8vmin;
-  transform: rotate(-18deg) rotateX(-20deg);
-  animation: growing-grass-ans--3 2s 2.2s linear backwards;
-}
-@keyframes growing-grass-ans--3 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-18deg) rotateX(-20deg) scale(0);
-  }
-}
-.flower__grass__leaf--4 {
-  top: 6%;
-  left: -135%;
-  --size: 8vmin;
-  transform: rotate(2deg);
-  animation: growing-grass-ans--4 2s 2s linear backwards;
-}
-@keyframes growing-grass-ans--4 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(2deg) scale(0);
-  }
-}
-.flower__grass__leaf--5 {
-  top: 20%;
-  left: 60%;
-  --size: 10vmin;
-  transform: rotate(-24deg) rotateX(-20deg);
-  animation: growing-grass-ans--5 2s 1.8s linear backwards;
-}
-@keyframes growing-grass-ans--5 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-24deg) rotateX(-20deg) scale(0);
-  }
-}
-.flower__grass__leaf--6 {
-  top: 22%;
-  left: -180%;
-  --size: 10vmin;
-  transform: rotate(10deg);
-  animation: growing-grass-ans--6 2s 1.6s linear backwards;
-}
-@keyframes growing-grass-ans--6 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
-}
-.flower__grass__leaf--7 {
-  top: 39%;
-  left: 70%;
-  --size: 10vmin;
-  transform: rotate(-10deg);
-  animation: growing-grass-ans--7 2s 1.4s linear backwards;
-}
-@keyframes growing-grass-ans--7 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-10deg) scale(0);
-  }
-}
-.flower__grass__leaf--8 {
-  top: 40%;
-  left: -215%;
-  --size: 11vmin;
-  transform: rotate(10deg);
-  animation: growing-grass-ans--8 2s 1.2s linear backwards;
-}
-@keyframes growing-grass-ans--8 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
-}
-.flower__grass__overlay {
-  position: absolute;
-  top: -10%;
-  right: 0%;
+  bottom: 0; /* Rumput di bawah */
+  left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  filter: blur(1.5vmin);
-  z-index: 100;
+  height: 20vmin; /* Tinggi rumput disesuaikan */
+  background-image: linear-gradient(to top, #04661f, transparent);
+  z-index: 5; /* Di belakang bunga */
 }
 
 #typewriter-text {
   position: absolute;
-  top: 10%;
+  top: 5%; /* Dipindah ke atas agar tidak tertutup */
   left: 50%;
   transform: translateX(-50%);
   font-family: 'Georgia', serif;
-  font-size: 0.8rem;
+  font-size: 0.7rem; /* Ukuran teks dikurangi */
   color: #ffe4f3;
   text-align: center;
-  width: 80%;
-  max-width: 600px;
-  padding: 15px;
-  background: rgba(0, 0, 0, 0.3);
+  width: 90%;
+  max-width: 500px;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   text-shadow: 0 0 8px #ff69b4;
   white-space: pre-wrap;
   line-height: 1.4;
+  z-index: 100; /* Di atas bunga */
 }
 
 @keyframes moving-flower-1 {
