--- a/main.css
+++ b/main.css
@@ -28,17 +28,15 @@ body {
   width: 100%;
   height: 100%;
   filter: blur(0.1vmin);
-  background-image: radial-gradient(ellipse at top, transparent 0%, var(--dark-color)), 
-                    radial-gradient(ellipse at bottom, var(--dark-color), rgba(145, 233, 255, 0.2)), 
-                    repeating-linear-gradient(220deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), 
-                    repeating-linear-gradient(189deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), 
-                    repeating-linear-gradient(148deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 19px, transparent 19px, transparent 22px), 
-                    linear-gradient(90deg, rgb(7, 107, 42), rgb(240, 240, 240));
+  background-image: radial-gradient(ellipse at top, transparent 0%, var(--dark-color)),
+                   radial-gradient(ellipse at bottom, var(--dark-color), rgba(145, 233, 255, 0.2)),
+                   linear-gradient(90deg, rgb(7, 107, 42), rgb(240, 240, 240));
 }
 
 .flowers {
   position: relative;
   transform: scale(0.9);
+  z-index: 10;
 }
 
 .flower {
@@ -53,7 +51,7 @@ body {
   animation: moving-flower-1 4s linear infinite;
 }
 .flower--1 .flower__line {
-  height: 70vmin;
+  height: 50vmin;
   animation-delay: 0.3s;
 }
 .flower--1 .flower__line__leaf--1 {
@@ -68,55 +66,6 @@ body {
 .flower--1 .flower__line__leaf--4 {
   animation: blooming-leaf-left var(--fl-speed) 1s backwards;
 }
-.flower--1 .flower__line__leaf--5 {
-  animation: blooming-leaf-right var(--fl-speed) 1.8s backwards;
-}
-.flower--1 .flower__line__leaf--6 {
-  animation: blooming-leaf-left var(--fl-speed) 2s backwards;
-}
-
-.flower--2 {
-  left: 50%;
-  transform: rotate(20deg);
-  animation: moving-flower-2 4s linear infinite;
-}
-.flower--2 .flower__line {
-  height: 60vmin;
-  animation-delay: 0.6s;
-}
-.flower--2 .flower__line__leaf--1 {
-  animation: blooming-leaf-right var(--fl-speed) 1.9s backwards;
-}
-.flower--2 .flower__line__leaf--2 {
-  animation: blooming-leaf-right var(--fl-speed) 1.7s backwards;
-}
-.flower--2 .flower__line__leaf--3 {
-  animation: blooming-leaf-left var(--fl-speed) 1.5s backwards;
-}
-.flower--2 .flower__line__leaf--4 {
-  animation: blooming-leaf-left var(--fl-speed) 1.3s backwards;
-}
-
-.flower--3 {
-  left: 50%;
-  transform: rotate(-15deg);
-  animation: moving-flower-3 4s linear infinite;
-}
-.flower--3 .flower__line {
-  animation-delay: 0.9s;
-}
-.flower--3 .flower__line__leaf--1 {
-  animation: blooming-leaf-right var(--fl-speed) 2.5s backwards;
-}
-.flower--3 .flower__line__leaf--2 {
-  animation: blooming-leaf-right var(--fl-speed) 2.3s backwards;
-}
-.flower--3 .flower__line__leaf--3 {
-  animation: blooming-leaf-left var(--fl-speed) 2.1s backwards;
-}
-.flower--3 .flower__line__leaf--4 {
-  animation: blooming-leaf-left var(--fl-speed) 1.9s backwards;
-}
 
 .flower__leafs {
   position: relative;
@@ -125,23 +74,6 @@ body {
 .flower__leafs--1 {
   animation-delay: 1.1s;
 }
-.flower__leafs--2 {
-  animation-delay: 1.4s;
-}
-.flower__leafs--3 {
-  animation-delay: 1.7s;
-}
-.flower__leafs::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: -8vmin;
-  transform: translateX(-50%);
-  width: 8vmin;
-  height: 8vmin;
-  background-color: #6bf0ff;
-  filter: blur(10vmin);
-}
 
 .flower__leaf {
   position: absolute;
@@ -149,7 +81,7 @@ body {
   left: 50%;
   width: 8vmin;
   height: 11vmin;
-  border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
+  border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
   background-color: #f672b0;
   background-image: linear-gradient(to top, #ee5286, #ee5286);
   transform-origin: bottom center;
@@ -157,101 +89,52 @@ body {
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
 }
 .flower__leaf--1 {
-  transform: translate(-10%, 1%) rotateY(40deg) rotateX(-50deg);
+  transform: translate(-50%, 0) rotate(0deg);
 }
 .flower__leaf--2 {
-  transform: translate(-50%, -4%) rotateX(40deg);
+  transform: translate(-50%, 0) rotate(90deg);
 }
 .flower__leaf--3 {
-  transform: translate(-90%, 0%) rotateY(45deg) rotateX(50deg);
+  transform: translate(-50%, 0) rotate(180deg);
 }
 .flower__leaf--4 {
-  width: 8vmin;
-  height: 8vmin;
-  transform-origin: bottom left;
-  border-radius: 4vmin 10vmin 4vmin 4vmin;
-  transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  background-image: linear-gradient(to top, #ee5286, #ee5286);
-  z-index: 1;
-  opacity: 0.8;
-}
-
-.flower__white-circle {
-  position: absolute;
-  left: -3.5vmin;
-  top: -3vmin;
-  width: 9vmin;
-  height: 4vmin;
-  border-radius: 50%;
-  background-color: #fff;
-}
-.flower__white-circle::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 45%;
-  transform: translate(-50%, -50%);
-  width: 60%;
-  height: 60%;
-  border-radius: inherit;
-  background-image: repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), linear-gradient(90deg, rgb(127, 47, 21), rgb(255, 206, 0));
+  transform: translate(-50%, 0) rotate(270deg);
 }
 
 .flower__line {
-  height: 55vmin;
+  height: 40vmin;
   width: 1.5vmin;
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.2), transparent, rgba(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #583e08, #944415);
+  background-image: linear-gradient(to top, transparent 10%, #583e08, #944415);
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
   animation: grow-flower-tree 4s backwards;
 }
 
 .flower__line__leaf {
-  --w: 7vmin;
-  --h: calc(var(--w) + 2vmin);
+  --w: 5vmin;
+  --h: calc(var(--w) + 1vmin);
   position: absolute;
   top: 20%;
-  left: 90%;
+  left: 50%;
   width: var(--w);
   height: var(--h);
-  border-top-right-radius: var(--h);
-  border-bottom-left-radius: var(--h);
-  background-image: linear-gradient(to top, rgba(20, 117, 122, 0.4), #095721);
+  border-radius: 50% 0 0 50%;
+  background-image: linear-gradient(to top, #095721, #095721);
+  transform-origin: bottom center;
 }
 .flower__line__leaf--1 {
-  transform: rotate(70deg) rotateY(30deg);
+  transform: rotate(45deg);
 }
 .flower__line__leaf--2 {
-  top: 45%;
-  transform: rotate(70deg) rotateY(30deg);
+  top: 30%;
+  transform: rotate(45deg);
 }
 .flower__line__leaf--3 {
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: var(--h);
-  border-bottom-right-radius: var(--h);
-  left: -100%;
-  top: 12%;
-  transform: rotate(-70deg) rotateY(30deg);
+  left: -50%;
 }
 .flower__line__leaf--4 {
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: var(--h);
-  border-bottom-right-radius: var(--h);
-  left: -100%;
-  top: 40%;
-  transform: rotate(-70deg) rotateY(30deg);
-}
-.flower__line__leaf--5 {
-  top: 0;
-  transform-origin: left;
-  transform: rotate(70deg) rotateY(30deg) scale(0.6);
-}
-.flower__line__leaf--6 {
-  top: -2%;
-  left: -90%;
-  transform-origin: right;
-  transform: rotate(-70deg) rotateY(30deg) scale(0.6);
+  left: -50%;
+  top: 30%;
+  transform: rotate(-45deg);
 }
 
 #typewriter-text {
@@ -260,17 +143,13 @@ body {
   left: 50%;
   transform: translateX(-50%);
   font-family: 'Georgia', serif;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   color: #ffe4f3;
   text-align: center;
-  width: 80%;
-  max-width: 600px;
-  padding: 15px;
-  background: none;
-  border-radius: 10px;
-  text-shadow: 0 0 8px #ff69b4, 0 0 16px #ff69b4;
-  white-space: pre-wrap;
-  line-height: 1.4;
+  width: 90%;
+  max-width: 500px;
+  padding: 10px;
+  text-shadow: 0 0 8px #ff69b4;
   z-index: 100;
 }
 
@@ -278,22 +157,14 @@ body {
   0%, 100% { transform: rotate(2deg); }
   50% { transform: rotate(-2deg); }
 }
-@keyframes moving-flower-2 {
-  0%, 100% { transform: rotate(18deg); }
-  50% { transform: rotate(14deg); }
-}
-@keyframes moving-flower-3 {
-  0%, 100% { transform: rotate(-18deg); }
-  50% { transform: rotate(-20deg) rotateY(-10deg); }
-}
 @keyframes blooming-leaf-right {
-  0% { transform-origin: left; transform: rotate(70deg) rotateY(30deg) scale(0); }
+  0% { transform: rotate(70deg) scale(0); }
 }
 @keyframes blooming-leaf-left {
-  0% { transform-origin: right; transform: rotate(-70deg) rotateY(30deg) scale(0); }
+  0% { transform: rotate(-70deg) scale(0); }
 }
 @keyframes grow-flower-tree {
-  0% { height: 0; border-radius: 1vmin; }
+  0% { height: 0; }
 }
 @keyframes blooming-flower {
   0% { transform: scale(0); }
